--- a/registration.html
+++ b/registration.html
@@ -13,7 +13,7 @@
 <!--  style="background-image: url(https://i.ibb.co/WVfCKYN/Untitled-3-01.jpg)"; -->
 
 <body>
-    <div style="background-image: url(https://i.ibb.co/WVfCKYN/Untitled-3-01.jpg)" ;>
+    <div class="bg-no-repeat bg-cover bg-bottom" style="background-image: url(https://i.ibb.co/WVfCKYN/Untitled-3-01.jpg)" ;>
         <h1 class="tittle text-center text-4xl font-black p-5">Create Your Account</h1>
         <div class="hero min-h-screen">
             <div class="form-container card  shadow-2xl">
