added another page

--- a/home-page-1.html
+++ b/home-page-1.html
@@ -29,7 +29,7 @@
       <h1 class="title">Dhaka Metro Rail</h1>
       <h4 class="title-description">Travel with security & reach your destination.</h4>
     </div><br>
-    <button class="book-btn">Book Now</button>
+    <a href="home-page-2.html" class="book-btn">Book Now</a>
   </header>
   <!--wellcome end-->
   <!--Header end--> 
