--- a/registration.html
+++ b/registration.html
@@ -55,8 +55,8 @@
                     </div>
 
                     <div class="form-control mt-6">
-                        <button
-                            class="bg-[#5AE4A8] text-white font-semibold rounded-lg shadow-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-400 focus:ring-opacity-75 py-3">Sign
+                        <button onclick=""
+                            class="bg-[#5AE4A8] text-white font-semibold rounded-lg shadow-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-400 focus:ring-opacity-75 py-3 sign-btn">Sign
                             Up</button>
                     </div>
                     <p class="text-base text-center text-gray-500">Already have an account ? go to <a
