log in page connected

--- a/home-page-1.html
+++ b/home-page-1.html
@@ -18,7 +18,7 @@
       <img class="logo" src="images/logo.png" alt="logo">
     </div>
     <div class="btn-section">
-      <a href="./Log In page.html" class="nav-btn one">Sign-In</a>
+      <a href="./log-in-page.html" class="nav-btn one">Sign-In</a>
       <a href="./registration.html" class="nav-btn two">Sign-Up</a>
     </div>
   </div>
