--- a/registration.html
+++ b/registration.html
@@ -60,7 +60,7 @@
                             Up</button>
                     </div>
                     <p class="text-base text-center text-gray-500">Already have an account ? go to <a
-                            href="./Log In page.html" class="link link-primary">Sign In</a></p>
+                            href="./log-in-page.html" class="link link-primary">Sign In</a></p>
                 </div>
             </div>
         </div>
