--- a/log-in-page.html
+++ b/log-in-page.html
@@ -34,7 +34,7 @@
     }
   </style>
 
-
+  <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
